Vertex snapping with median not working if the object is not at center of the world #68684

Closed
opened 2019-08-15 10:39:47 +02:00 by Christian Hubert · 5 comments

System Information
Operating system: Windows 10
Graphics card: NVidia 980M

Blender Version
Broken: 2.80 sub 75
Worked: 2.79

In edit mode, vertex snapping on with median option works only if the object's origin is at the center of the world.
If not, it seems there is a delta relative to the diff between its origin and the world center.

To reproduce it:

  • Start with default scene with cube
  • Duplicate it (shift D) and place it somewhere but not at the world center
  • Enter edit mode on the duplicated one
  • Turn snapping on with vertex and median target
  • Select at least two vertices
  • Try to snap to the other cube
**System Information** Operating system: Windows 10 Graphics card: NVidia 980M **Blender Version** Broken: 2.80 sub 75 Worked: 2.79 In edit mode, vertex snapping on with median option works only if the object's origin is at the center of the world. If not, it seems there is a delta relative to the diff between its origin and the world center. To reproduce it: - Start with default scene with cube - Duplicate it (shift D) and place it somewhere but not at the world center - Enter edit mode on the duplicated one - Turn snapping on with vertex and median target - Select at least two vertices - Try to snap to the other cube

Added subscriber: @christian

Added subscriber: @christian
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Germano Cavalcante was assigned by Philipp Oeser 2019-08-15 11:14:45 +02:00
Member

Can confirm, I guess @mano-wii could have a look?

Can confirm, I guess @mano-wii could have a look?

This issue was referenced by 95a0144293

This issue was referenced by 95a0144293b840bfbdcb6a41c1a3a26976961b9b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#68684
No description provided.