Fix T68684: Vertex snapping with median not working if the object is not at center of the world